数値型クラスをnewしてたところをvalueOfに変えた
git-svn-id: https://www.seasar.org/svn/sandbox/fisshplate/trunk@291 c159f9c0-7f7c-4dca-964d-717b2124a8cb